# medical-report-crewai

./: README.md  app.py  pyproject.toml  rapport_psychiatrique.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
src/medical_report/: crew.py  main.py  pdf_generator.py
src/medical_report/config/: agents.yaml  tasks.yaml
src/medical_report/tools/: custom_tool.py
